<resources>
    <string name="app_name">CropDox</string>
    <string name="tela_qr_name">Escaneie o código QR</string>
    <string name="button">Play</string>
    <string name="img_btn_play">play.png</string>

    <string name="str_btn_iniciar">Iniciar</string>
    <string name="str_btn_sair">Logout</string>
    <string name="str_btn_desconnect">Desconectar</string>

    <string name="str_txtvw_consentimento">Fazendo login com sua conta Google, você concorda com os termos de uso deste aplicativo.</string>

    <string name="str_about">Sobre</string>
    <string name="str_video">Video doc Extrator (New)</string>
    <string name="instrucao_qr">Acesse cropdox.com no seu computador</string>
    <string name="instrucao_de_uso"> <![CDATA[    <h3>Instruções</h3>  1 - Clique em Iniciar;<br>        2 - tire uma foto;<br>        3 - acesse cropdox.com no seu computador;<br>        4 - escaneie o código QR. ]]> </string>
    <string name="descricao_app">Para utilizar o app, regule os controles deslizantes para remover o fundo onde se encontra o documento. Estes controladores regulam as cores nos canais HSV min e max (da esquerda para a direita). Após isso o app irá desenhar um retângulo ao redor do documento, então você clica sobre o botão para tirar a foto.</string>
    <string name="cropdox_beta">CropDox - beta</string>
    <string name="transfer_result">Exibindo no seu browser!!</string>
    <string name="not_log_in">not_log_in</string>
    <string name="not_firebase_auth">not_firebase_auth</string>
    <string name="sign_out">Logout</string>
    <string name="disconnect">Discoonectar</string>
    <string name="str_textView_saudacoes">Seja Bem-vindo!</string>
    <string name="str_description_logotipo">logotipo</string>
    <string name="str_description_sucesso">sucesso</string>
    <string name="str_description_miraQR">Mira QR code</string>

    <!-- app:adUnitId="ca-app-pub-5217265578005284/9873449037" <== id de bloco grande 3º para produção-->
    <!-- app:adUnitId="ca-app-pub-5217265578005284/4453756926" <== id de bloco banner  para produção-->
    <!-- app:adUnitId="ca-app-pub-3940256099942544/6300978111" <== id de bloco  para teste-->
    <string name="str_google_admob_id_bloco">ca-app-pub-3940256099942544/6300978111</string>
    <string name="str_contentDescription_loading">LOADING</string>
    <string name="str_content_img_recebida">Imagem recebida</string>
    <string name="btn_str_enviar_ao_browser">Enviar ao browser</string>
    <string name="button_voltar">Voltar</string>
    <string name="str_button_enviar">Enviar</string>
</resources>
